<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SkysEvents</string>
    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="Up_Coming_fragment">Hello Up Coming fragment</string>
    <string name="Popular_fragment">Hello Popular fragment</string>
    <string name="title_skysevent_detail">SkysEvent Detail</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_bookmark">remember</string>
    <string name="send_to">Send Share</string>
    <string name="action_Invite">Tell a Friend</string>
    <string name="action_account">Account</string>
    <string name="action_About">About</string>
    <string name="action_settings">Settings</string>
    <string name="copyright017">© Copyright 2017 SKY-EVENTS. All Rights Reserved</string>
    <string name="invite">Send invitations!</string>
    <string name="welcome">Invites</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invitation_title">Send SkysEvents App Invitation</string>
    <string name="invitation_message">This app is terrific, give it a try its Free!</string>
    <string name="invitation_deep_link">http://example.com/offer/five_dollar_offer</string>
    <string name="invitation_custom_image">http://10.0.0.6/cheda/Images/sky_logo.png</string>
    <string name="invitation_cta">Install!</string>
    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>
    <string name="send_failed">Sending invitations was Cancelled</string>
    <string name="invite_dialog_title">You got an invitation!</string>
    <string name="google_play_services_error">Google Play Services Error</string>
    <string name="transition_image">logo_shared</string>
    <string name="transition_name">name_shared</string>
    <string name="transition_date">date_shared</string>
    <string name="transition_fee">fee_shared</string>
    <string name="transition_venue">venue_shared</string>
    <string name="logout">Log Out</string>
    <string name="dialog_no_favorites_set">You have not yet chosen any favorite Events.  Press the heart when you
                                            like the Events and want to save it to your favorites list.</string>
    <string name="favorites">Favorites</string>
    <string name="add_favr">Added to Favorites</string>
    <string name="SkyEvents">Skys Events</string>
    <string name="SkyEventslink">http://motifsdigital.co.za/skysevents.apk</string>
    <string name="remove_favr">Removed from Favorites</string>
    <string name="no_favorites_items">No Favorites</string>
    <string name="no_favorites_msg">Press on item Heart to add to favorites.</string>
    <string name="favorites_remove_msg">Long press on item to remove from favorites.</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="hello_world">Hello John</string>
    <string name="listitem_textview_default_activity_title">Activity Title</string>
    <string name="listitem_textview_activity_class_name">Activity Class Name</string>
    <string name="title_activity_sample_inflate_view_from_xml">Inflate a View from the XML file</string>
    <string name="title_activity_sample_create_view_in_java_code">Create a View in the Java code</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_activity_not_found_message">Activity Not Found: %s</string>
    <string name="title_activity_my_first">MyFirstActivity</string>
    <string name="title_activity_text_view_example">TextViewExampleActivity</string>
    <string name="title_activity_edit_text_example">EditTextExampleActivity</string>
    <string name="title_activity_image_view_example">ImageViewExampleActivity</string>
    <string name="title_activity_button">ButtonActivity</string>
    <string name="title_activity_button_example">ButtonExampleActivity</string>
    <string name="title_activity_check_box_example">CheckBoxExampleActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_linear_layout_example">LinearLayoutExampleActivity</string>
    <string name="title_activity_relative_layout_example">RelativeLayoutExampleActivity</string>
    <string name="title_activity_frame_layout_example">FrameLayoutExampleActivity</string>
    <string name="title_activity_options_menu_example">OptionsMenuExampleActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_radio_button_example">RadioButtonExampleActivity</string>
    <string name="title_activity_switch_example">SwitchExampleActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="empty_movie_list">Looking for Events...Check Data Connection</string>
    <string name="empty_list">No Event Information Available</string>
    <string name="empty_list_no_network">No information available. The network is not available to fetch Events  data</string>
    <string name="dialog_no_favorites_ok">OK</string>
    <string name="websitelink">www.skysevents.com</string>
    <string name="copyright_st">Copyright ©  2017 Skys Events. All rights Reserved.</string>
    <string name="app_version">Version 0.1.0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_near_me">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Cheda Flame</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login_register">Sign in</string>
    <string name="facebook_app_id">444346402601622</string>
    <string name="fb_login_protocol_scheme">fb444346402601622</string>
    <string name="sign_in_with_google" translation_description="Sign in button text">Sign in with Google</string>
    <string name="sign_in_with_facebook" translation_description="Sign in button text">Sign in with Facebook</string>
    <string name="sign_up_login" translation_description="Sign in button text">Sign in with Phone / Email</string>
    <string name="sign_in_with_email" translation_description="Sign in button text">Sign in with email</string>
    <string name="sign_in_with_phone" translation_description="Sign in button text">Sign in with phone</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="next_default" translation_description="Button text to continue">Next</string>
    <string name="email_hint" translation_description="Hint in email input field">Email</string>
    <string name="phone_hint" translation_description="Hint for phone input field">Phone Number</string>
    <string name="password_hint" translation_description="Hint for password input field">Password</string>
    <string name="required_field" translation_description="Inline error for required field">You can\'t leave this empty.</string>
    <string name="invalid_email_address" translation_description="Inline error for invalid email address">That email address isn\'t correct</string>
    <string name="verify_phone_number" translation_description="Button text to submit confirmation code and complete phone verification">Verify Phone Number</string>
    <string name="sms_terms">Note: Using phone sign-in, you will receive an SMS message with a verification code and standard rates apply.</string>
    <string name="launch_title">Welcome..</string>
    <string name="sign_in">Start</string>
    <string name="auth_providers_header">Select Login Provider.:</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone</string>
    <string name="facebook_label">Facebook</string>
    <string name="google_label">Google</string>
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>
    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>
</resources>