<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_account"
        android:orderInCategory="1"
        android:title="@string/action_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Invite"
        android:orderInCategory="2"
        android:title="@string/action_Invite"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_About"
        android:orderInCategory="4"
        android:title="@string/action_About"
        app:showAsAction="never" />

    <item android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:orderInCategory="5"
        app:showAsAction="never" />

</menu>