<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cheda.skysevents.startscreen.LoginReg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="16dp"
            android:paddingBottom="32dp"
            android:orientation="vertical">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_gravity="center_horizontal"
                android:drawableTop="@drawable/sky_logo_white"
                android:gravity="center"
                android:text="@string/launch_title" />

            <Button
                android:id="@+id/sign_in"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/sign_in" />


            <TextView
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/auth_providers_header" />

            <CheckBox
                android:id="@+id/google_provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="@color/colorWhite"
                android:text="@string/google_label" />

            <CheckBox
                android:id="@+id/facebook_provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="@color/colorWhite"
                android:text="@string/facebook_label" />

            <CheckBox
                android:id="@+id/email_provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="@color/colorWhite"
                android:text="@string/email_label" />

            <CheckBox
                android:id="@+id/phone_provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="@color/colorWhite"
                android:text="@string/phone_label" />

            <TextView
                android:id="@+id/copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/copyright017"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:typeface="normal" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
