<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity" >
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/event_detail"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">


        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingBottom="10dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/event_poster"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/event_date"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/get_Ticket"
        android:text="event_date"
        android:transitionName="@string/transition_date"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="14sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/get_Ticket"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/color3"
        android:text="Get Tickets"
        android:textSize="12sp" />


</RelativeLayout>

        <TextView
            android:id="@+id/event_name"
            android:transitionName="@string/transition_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Friends"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/more_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cheese_ipsum"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/event_fee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Related"
            android:transitionName="@string/transition_fee"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/event_venue"
            android:transitionName="@string/transition_venue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cheese_ipsum"
            android:textAlignment="center" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>


</FrameLayout>