<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:xmls="http://schemas.android.com/apk/res-auto"
    android:nestedScrollingEnabled="true"
    android:background="@color/colorWhite">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
          />
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:adjustViewBounds="true"
        android:src="@drawable/sky_logo2"
        android:layout_below="@+id/appbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright017"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:textColor="#000"
        android:textSize="12sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/phoneLabel"
        android:text="Enter Your Phone Number"
        android:textColor="#000"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/logo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="53dp"
        android:layout_marginEnd="53dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:isScrollContainer="true"
        android:weightSum="1"
        android:layout_below="@+id/phoneLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="24dp">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/country_list"
                style="@style/CountrySpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />


            <EditText
                android:id="@+id/phone_number"
                style="@style/TextInputEditText.PhoneField"
                android:layout_gravity="end" />

        </LinearLayout>

        <TextView
            android:id="@+id/phone_number_error"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="77dp"
            android:text=""
            android:textColor="@color/errorColor"
            android:layout_marginLeft="77dp" />

        <Button
            android:id="@+id/btn_sendCode"
            android:layout_width="280dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/sky_button"
            android:text="@string/verify_phone_number"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:typeface="normal" />

        <TextView
            android:id="@+id/send_sms_tos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:textSize="12sp"
            android:textColor="@color/color5"
            android:text="@string/sms_terms"
            android:textIsSelectable="true" />

    </LinearLayout>


</RelativeLayout>
